[project]
name = "expensemanager-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Жеревчук Сергій",email = "Foxtrotserega@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.19.0,<4.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "aiohttp (>=3.11.16,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
